--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
   --bg-url: url(./assets/bg-desktop.jpg);
   --stroke-color: rgba(255, 255, 255, 0.5);
   --surface-color: rgba(255, 255, 255, 0.1);
-  --surface-color-hover: rgba(0, 0, 0, 0.02);
+  --surface-color-hover: rgba(255, 255, 255, 0.02);
   --highligth-color: rgba(255, 255, 255, 0.2);
   --switch-bg-url: url(./assets/moon-stars.svg);
 }
@@ -114,19 +114,19 @@ ul li a:hover {
   background-color: var(--surface-color-hover);
   border: 1.5px solid var(--text-color);
 }
-
+/*social links*/
 #social-Links {
   display: flex;
-  padding: 24px 0;
   justify-content: center;
+  padding: 24px 0;
   font-size: 24px;
 }
 #social-Links a {
   display: flex;
-  padding: 16px;
   align-items: center;
   justify-content: center;
-
+  padding: 16px;
+  
   transition: backgroud 0.2s;
   border-radius: 50%;
 }
