--- a/style.css
+++ b/style.css
@@ -29,8 +29,10 @@ body * {
   color: var(--text-color);
 }
 #container {
-  width: 360px;
+  width: 100%;
+  max-width: 588;
   margin: 56px auto 0px;
+  padding: 0 24px;
 }
 /*profile*/
 #profile {
@@ -126,7 +128,7 @@ ul li a:hover {
   align-items: center;
   justify-content: center;
   padding: 16px;
-  
+
   transition: backgroud 0.2s;
   border-radius: 50%;
 }
