change background based on media queries

--- a/style.css
+++ b/style.css
@@ -23,6 +23,7 @@
 }
 body {
   background: var(--bg-url) no-repeat top center/cover;
+  height: 100vh;
 }
 body * {
   font-family: "Inter", sans-serif;
@@ -139,4 +140,13 @@ footer {
   padding: 24px;
   text-align: center;
   font-size: 14px;
+}
+
+@media (min-widht: 700px) {
+  :root {
+    --bg-url: url(.assests/bg-desktop.jpg);
+  }
+  .light {
+    --bg-url: url(.assests/bg-desktop-light.jpg);
+  }
 }
