--- a/style.css
+++ b/style.css
@@ -30,8 +30,9 @@ body * {
   color: var(--text-color);
 }
 #container {
+  /*width: 360px;*/
   width: 100%;
-  max-width: 588;
+  max-width: 588px;
   margin: 56px auto 0px;
   padding: 0 24px;
 }
@@ -71,8 +72,7 @@ body * {
   transform: translateY(-50%);
 }
 .light #switch button {
-  right: 0;
-  left: initial;
+  animation: slide-in 0.4s;
 }
 #switch span {
   display: block;
@@ -142,11 +142,19 @@ footer {
   font-size: 14px;
 }
 
-@media (min-widht: 700px) {
+@media (min-width: 700px) {
   :root {
     --bg-url: url(.assests/bg-desktop.jpg);
   }
   .light {
     --bg-url: url(.assests/bg-desktop-light.jpg);
+  }
+}
+Animation @keyframes slide-in {
+  from {
+    left: 0;
+  }
+  to {
+    left: 50%;
   }
 }
