--- a/style.css
+++ b/style.css
@@ -70,9 +70,13 @@ body * {
   left: 0;
   z-index: 1;
   transform: translateY(-50%);
+  animation: slide-back 0.3s;
 }
 .light #switch button {
-  animation: slide-in 0.4s;
+  animation: slide-in 0.4s forwards;
+}
+#switch button:hover {
+  outline: 8px solid var(--highligth-color);
 }
 #switch span {
   display: block;
@@ -142,19 +146,27 @@ footer {
   font-size: 14px;
 }
 
-@media (min-width: 700px) {
+/*@media (min-width: 700px) {
   :root {
     --bg-url: url(.assests/bg-desktop.jpg);
   }
   .light {
     --bg-url: url(.assests/bg-desktop-light.jpg);
   }
-}
-Animation @keyframes slide-in {
+}*/
+@keyframes slide-in {
   from {
     left: 0;
   }
   to {
     left: 50%;
+  }
+}
+@keyframes slide-back {
+  from {
+    left: 50%;
+  }
+  to {
+    left: 0;
   }
 }
